[gd_scene load_steps=13 format=3 uid="uid://dwlyi2oj4yksl"]

[ext_resource type="Script" uid="uid://b3tskrkc5usx" path="res://Scripts/Menu/main_menu.gd" id="1_bkwd7"]
[ext_resource type="Theme" uid="uid://5uq80ele5x1b" path="res://Assets/main_theme.tres" id="1_gpijq"]
[ext_resource type="PackedScene" uid="uid://dx25w13rsr5xr" path="res://Scenes/Menu/settings_menu.tscn" id="2_tself"]
[ext_resource type="PackedScene" uid="uid://cosb80or2npy4" path="res://Scenes/Menu/world_select.tscn" id="3_7jtkx"]
[ext_resource type="Texture2D" uid="uid://b3wn3ofeq3jso" path="res://Assets/Textures/MainMenuBackground/1.jpg" id="3_nbh3q"]
[ext_resource type="Texture2D" uid="uid://c3clmju5asm4d" path="res://Assets/Textures/MainMenuBackground/2.jpg" id="4_4qbh4"]
[ext_resource type="PackedScene" uid="uid://bbdqopeogorpk" path="res://Scenes/Menu/controls_menu.tscn" id="4_gpijq"]
[ext_resource type="Texture2D" uid="uid://c1mobl6e7e042" path="res://Assets/Textures/MainMenuBackground/3.jpg" id="5_3ko7u"]
[ext_resource type="PackedScene" uid="uid://bjbbmrwcd6a0c" path="res://Scenes/Menu/mod_menu.tscn" id="5_gpijq"]
[ext_resource type="Texture2D" uid="uid://bcm3u8rx2yjkb" path="res://Assets/Textures/MainMenuBackground/4.jpg" id="6_jqrnd"]
[ext_resource type="PackedScene" uid="uid://ipwooukhmjtm" path="res://Scenes/Menu/credits.tscn" id="7_pn3xf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2sy2r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nbh3q")
}, {
"duration": 1.0,
"texture": ExtResource("4_4qbh4")
}, {
"duration": 1.0,
"texture": ExtResource("5_3ko7u")
}, {
"duration": 1.0,
"texture": ExtResource("6_jqrnd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gpijq")
script = ExtResource("1_bkwd7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.46618086, 0.4661808, 0.4661808, 1)
position = Vector2(576, 324)
scale = Vector2(0.6000001, 0.6)
sprite_frames = SubResource("SpriteFrames_2sy2r")
autoplay = "default"
frame_progress = 0.57515067

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.25
offset_top = -52.5
offset_right = 178.25
offset_bottom = 238.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "PLAY"

[node name="Settings" type="Button" parent="MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "SETTINGS"

[node name="Credits" type="Button" parent="MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "CREDITS"

[node name="Quit" type="Button" parent="MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "QUIT"

[node name="SettingsMenu" parent="." instance=ExtResource("2_tself")]
visible = false
layout_mode = 1
anchor_left = 0.2534722
anchor_top = 0.19907407
anchor_right = 0.7534722
anchor_bottom = 0.79207414
grow_horizontal = 1
grow_vertical = 1

[node name="ControlsMenu" parent="." instance=ExtResource("4_gpijq")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -260.0
offset_right = 384.0
offset_bottom = 260.0

[node name="WorldSelect" parent="." instance=ExtResource("3_7jtkx")]
visible = false
layout_mode = 1
offset_left = 192.0
offset_top = 128.0
offset_right = 191.61597
offset_bottom = 127.73596

[node name="ModMenu" parent="." instance=ExtResource("5_gpijq")]
visible = false
layout_mode = 1
anchor_left = 0.2543403
anchor_top = 0.20524691
anchor_right = 0.7453402
anchor_bottom = 0.7822469
metadata/_edit_use_anchors_ = true

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "1.0.0"
horizontal_alignment = 2

[node name="Credits" parent="." instance=ExtResource("7_pn3xf")]
visible = false
layout_mode = 1
anchor_left = 0.18721527
anchor_top = 0.1713457
anchor_right = 0.80978477
anchor_bottom = 0.83965445
offset_left = 0.32800293
offset_top = -7.032013
offset_right = 3.1279297
offset_bottom = -0.09603882
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MainButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainButtons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="closed" from="SettingsMenu" to="." method="_on_settings_menu_closed"]
[connection signal="closed" from="ControlsMenu" to="SettingsMenu" method="_on_controls_menu_closed"]
[connection signal="closed" from="WorldSelect" to="." method="_on_world_select_closed"]
[connection signal="closed" from="ModMenu" to="." method="_on_mod_menu_closed"]
[connection signal="closed" from="Credits" to="." method="_on_credits_closed"]
